US National meeting paper Rohit

--- a/index.html
+++ b/index.html
@@ -586,7 +586,14 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </div>	
 <br>
 
-<li> R. Khare, V. Raghavan, K. Narayanaswamy, "Study of auto-ignition and extinction characteristics of diesel blended with oxygenates in laminar opposed non-premixed flames", 10th U.S. National Combustion Meeting, 2017.<br>
+<div id="flip6">
+<li> R. Khare, V. Raghavan, K. Narayanaswamy, "Study of auto-ignition and extinction characteristics of diesel blended with oxygenates in laminar opposed non-premixed flames", 10th U.S. National Combustion Meeting, 2017.
+	</div>
+	<div id="panel6">
+		<ul style="list-style-type:square">
+		<li><a href="https://www.dropbox.com/s/dh8y3nkp7i4291i/2LF-0358.pdf?dl=0" target="_blank">Conference proceeding</a></li>
+		</ul>
+	</div>
 <br>
 
 <li> M. Hunyadi-Gall, G. Mairinger, R. Khare, K. Narayanaswamy, V. Raghavan, K. Seshadri, "The Influence of Stoichiometric Mixture Fraction on Extinction of Laminar, Nonpremixed DME Flames", 10th U.S. National Combustion Meeting, 2017.	
