US National meeting paper updates

--- a/index.html
+++ b/index.html
@@ -581,7 +581,8 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/sh/f238210u84jyb9c/AAAVwHEh0j0L267Hrvk0PgpYa?dl=0" target="_blank">Supplementary materials</a></li>
+	<li><a href="https://www.dropbox.com/s/m8ubermaezitqrd/US_comb_ver5.pdf?dl=0" target="_blank">Conference Proceeding*</a></li>
+	<li><a href="https://www.dropbox.com/sh/f238210u84jyb9c/AAAVwHEh0j0L267Hrvk0PgpYa?dl=0" target="_blank">Supplementary materials*</a></li>
 	</ul>
 </div>	
 <br>
@@ -591,12 +592,19 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 	</div>
 	<div id="panel6">
 		<ul style="list-style-type:square">
-		<li><a href="https://www.dropbox.com/s/dh8y3nkp7i4291i/2LF-0358.pdf?dl=0" target="_blank">Conference proceeding</a></li>
+		<li><a href="https://www.dropbox.com/s/dh8y3nkp7i4291i/2LF-0358.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
 		</ul>
 	</div>
 <br>
 
+<div id="flip6">
 <li> M. Hunyadi-Gall, G. Mairinger, R. Khare, K. Narayanaswamy, V. Raghavan, K. Seshadri, "The Influence of Stoichiometric Mixture Fraction on Extinction of Laminar, Nonpremixed DME Flames", 10th U.S. National Combustion Meeting, 2017.	
+	</div>
+	<div id="panel6">
+		<ul style="list-style-type:square">
+		<li><a href="https://www.dropbox.com/s/bw7rrblrdts934y/Seshadri_2LF_0611.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
+		</ul>
+	</div>
 <br>
 </ul>
 </td>
