--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/m8ubermaezitqrd/US_comb_ver5.pdf?dl=0" target="_blank">Conference Proceeding*</a></li>
-	<li><a href="https://www.dropbox.com/sh/f238210u84jyb9c/AAAVwHEh0j0L267Hrvk0PgpYa?dl=0" target="_blank">Supplementary materials*</a></li>
+	<li><a href="https://www.dropbox.com/s/m8ubermaezitqrd/US_comb_ver5.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
+	<li><a href="https://www.dropbox.com/s/xmlq9f4ynesftvy/supplementary_material.pdf?dl=0" target="_blank">Supplementary materials*</a></li>
 	</ul>
 </div>	
 <br>
