ISEEC referred in CNF

--- a/index.html
+++ b/index.html
@@ -588,6 +588,16 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <br>
 
 <div id="flip6">
+<li> R. Khare, V. Raghavan, K. Narayanaswamy, "A chemical kinetic modeling study of the effects of oxygenated species on soot emissions from diesel engines", Proceedings of the International Conference on Sustainable Energy and Environmental Challenges, 2017.
+	</div>
+	<div id="panel6">
+		<ul style="list-style-type:square">
+		<li><a href="https://www.dropbox.com/s/wq76jxukj3hluqf/Extended_Abstract_ISEEC.pdf?dl=0" target="_blank">Conference proceeding*</a></li>
+		</ul>
+	</div>
+<br>
+
+<div id="flip6">
 <li> R. Khare, V. Raghavan, K. Narayanaswamy, "Study of auto-ignition and extinction characteristics of diesel blended with oxygenates in laminar opposed non-premixed flames", 10th U.S. National Combustion Meeting, 2017.
 	</div>
 	<div id="panel6">
