--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ To assess the validity of this reaction mechanism in non-premixed systems, extin
 <td width="15%">
 <center><img src="./images/Rohit_Khare.jpg" width="170">	
 </br>
-<h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</h4>
+<h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</a><br></h4>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is currently pursuing his Masters at IIT Madras. His primary focus is on fundamental studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.</p></br>
