first CNF @ iitm - with rohit

--- a/index.html
+++ b/index.html
@@ -653,22 +653,28 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <br>
 
 
-<div id="flip6">
-	<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
-</div>
-<div id="panel6">
-	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/xlrfa5toz6ewris/Revised_Manuscript.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
-</ul>
-</div>
-<br>
-
 <div id="flip7">
 	<li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate" (under review)
 </div>
 <div id="panel7">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/uuefn365fh8h3yq/CNF-D-18-00053R1.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
+</ul>
+</div>
+<br>
+
+<div id="flip6">
+	<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study", Combustion and Flame (accepted)
+</div>
+<div id="panel6">
+	<ul style="list-style-type:square">
+	<li><a href="https://www.dropbox.com/s/xlrfa5toz6ewris/Revised_Manuscript.pdf?dl=0" target="_blank">Preprint*</a> ,  <a href="https://www.dropbox.com/s/oqb8cuwcliwrza9/CNF_1.pdf?dl=0">Highlights</a></li>
+	<li><a href="https://www.dropbox.com/s/38016hs2zfwdud3/Supplementary_Material.pdf?dl=0" target="_blank">Supplementary document</a></li>
+		<li>Mechanism: 
+			<a href="https://www.dropbox.com/s/pu3zdxy1hd43iu9/Chemkin.mech?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/43d6zyd86inngbg/FlameMaster.mech?dl=0">FlameMaster format</a>
+		</li>
+		<li><a href="https://www.dropbox.com/s/l9ld3frev39f2oi/Thermo_File.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/nlbf0rkhpy5aau4/Transport_File.txt?dl=0" target="_blank">Transport data</a></li>
 </ul>
 </div>
 <br>
