adding aditya's poster link

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 </div>
 <div id="panel7">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/uuefn365fh8h3yq/CNF-D-18-00053R1.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
+	<li><a href="https://www.dropbox.com/s/uuefn365fh8h3yq/CNF-D-18-00053R1.pdf?dl=0" target="_blank">Submitted version* (under review)</a> ,  <a href="https://www.dropbox.com/s/5qbzf8d3qcdr9mu/CNF_2.pdf?dl=0">Highlights</a></li>
 </ul>
 </div>
 <br>
