--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <br>
 
 <div id="flip0">
-	<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (accepted).
+	<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling, 1--15, 2018 <a href="https://doi.org/10.1080/13647830.2018.1464210" target="_blank">DOI</a>.
 </div>
 <div id="panel0">
 	<ul style="list-style-type:square">
