--- a/index.html
+++ b/index.html
@@ -680,10 +680,11 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <br>
 
 <div id="flip0">
-	<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling, 1--15, 2018 <a href="https://doi.org/10.1080/13647830.2018.1464210" target="_blank">DOI</a>.
+	<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling, 1--15, 2018
 </div>
 <div id="panel0">
 	<ul style="list-style-type:square">
+	<li><a href="https://doi.org/10.1080/13647830.2018.1464210" target="_blank">DOI</a></li>
 	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Preprint*</a></li>
 	<li><a href="https://www.dropbox.com/s/eca2h8eko3vix9l/Supporting_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
 </ul>
