--- a/index.html
+++ b/index.html
@@ -684,9 +684,9 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 </div>
 <div id="panel0">
 	<ul style="list-style-type:square">
-	<li><a href="https://doi.org/10.1080/13647830.2018.1464210" target="_blank">DOI</a></li>
 	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Preprint*</a></li>
 	<li><a href="https://www.dropbox.com/s/eca2h8eko3vix9l/Supporting_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
+	<li><a href="https://doi.org/10.1080/13647830.2018.1464210" target="_blank">Journal version</a></li>
 </ul>
 </div>
 <br>
