My blog in sanskrit begins here; present pdf is a dummy one; will soon update it

--- a/index.html
+++ b/index.html
@@ -899,7 +899,15 @@ Write-up coming soon ...
 <a href="https://www.overleaf.com" target="_blank">WriteLaTeX</a></br>
 <a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a></br>
 <a href="https://www.wordclouds.com" target="_blank">WordClouds</a><br>
+<a href="https://www.wordclouds.com" target="_blank">Day-to-day events</a><br>
 </td>
+</tr>
+
+<tr>
+<td>
+<h2>Logger</h2>
+<body link="gray">
+<a href="logger/Trichy_Temple_Tour_June_2018.pdf" style="text-decoration:none" target="_blank"> Trichy temple tour </a> </td>
 </tr>
 </table>
 </div>
