--- a/index.html
+++ b/index.html
@@ -883,23 +883,23 @@ Write-up coming soon ...
 <tr>
 <td>
 <h2> Alma mater</h2>
-<a href="http://www.sknspmcvv.org"  style="text-decoration:none;color:white target="_blank">Vivekananda Vidyalaya, Perambur</a></br>
-<a href="http://www.davgirlsgopalapuram.com"  style="text-decoration:none;color:white target="_blank">DAV Girls, Gopalapuram</a></br>
-<a href="http://www.iitm.ac.in"  style="text-decoration:none;color:white target="_blank">Indian Institute of Technology Madras</a></br>
-<a href="http://www.stanford.edu"  style="text-decoration:none;color:white target="_blank">Stanford University</a></br>
-<a href="http://www.cornell.edu"  style="text-decoration:none;color:white target="_blank">Cornell University</a></br></br>
+<a href="http://www.sknspmcvv.org"  style="text-decoration:none;color:white" target="_blank">Vivekananda Vidyalaya, Perambur</a></br>
+<a href="http://www.davgirlsgopalapuram.com"  style="text-decoration:none;color:white" target="_blank">DAV Girls, Gopalapuram</a></br>
+<a href="http://www.iitm.ac.in"  style="text-decoration:none;color:white" target="_blank">Indian Institute of Technology Madras</a></br>
+<a href="http://www.stanford.edu"  style="text-decoration:none;color:white" target="_blank">Stanford University</a></br>
+<a href="http://www.cornell.edu"  style="text-decoration:none;color:white" target="_blank">Cornell University</a></br></br>
 </td>
 </tr>
 
 <tr>
 <td>
 <h2> Useful web-based tools</h2>
-<a href="http://arohatgi.info/WebPlotDigitizer/"  style="text-decoration:none;color:white target="_blank">Web plot digitizer</a></br>
-<a href="http://www.tutorialspoint.com/codingground.htm"  style="text-decoration:none;color:white target="_blank">Coding ground</a></br>
-<a href="https://www.overleaf.com"  style="text-decoration:none;color:white target="_blank">WriteLaTeX</a></br>
-<a href="http://detexify.kirelabs.org/classify.html"  style="text-decoration:none;color:white target="_blank">Detexify</a></br>
-<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white target="_blank">WordClouds</a><br>
-<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white target="_blank">Day-to-day events</a><br>
+<a href="http://arohatgi.info/WebPlotDigitizer/"  style="text-decoration:none;color:white" target="_blank">Web plot digitizer</a></br>
+<a href="http://www.tutorialspoint.com/codingground.htm"  style="text-decoration:none;color:white" target="_blank">Coding ground</a></br>
+<a href="https://www.overleaf.com"  style="text-decoration:none;color:white" target="_blank">WriteLaTeX</a></br>
+<a href="http://detexify.kirelabs.org/classify.html"  style="text-decoration:none;color:white" target="_blank">Detexify</a></br>
+<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white" target="_blank">WordClouds</a><br>
+<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white" target="_blank">Day-to-day events</a><br>
 </td>
 </tr>
 
