--- a/index.html
+++ b/index.html
@@ -899,7 +899,6 @@ Write-up coming soon ...
 <a href="https://www.overleaf.com"  style="text-decoration:none;color:white" target="_blank">WriteLaTeX</a></br>
 <a href="http://detexify.kirelabs.org/classify.html"  style="text-decoration:none;color:white" target="_blank">Detexify</a></br>
 <a href="https://www.wordclouds.com"  style="text-decoration:none;color:white" target="_blank">WordClouds</a><br>
-<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white" target="_blank">Day-to-day events</a><br>
 </td>
 </tr>
 
@@ -907,7 +906,7 @@ Write-up coming soon ...
 <td>
 <h2>Logger</h2>
 <body link="gray">
-<a href="logger/Trichy_Temple_Tour_June_2018.pdf" style="text-decoration:none;color:white" target="_blank"> Trichy temple tour </a> </td>
+<a href="logger/Intro.jpg" style="text-decoration:none;color:white" target="_blank"> Intro </a> </td>
 </tr>
 </table>
 </div>
