logger separated out

--- a/index.html
+++ b/index.html
@@ -904,9 +904,10 @@ Write-up coming soon ...
 
 <tr>
 <td>
-<h2>Logger</h2>
+<h2> 
 <body link="gray">
-<a href="logger/Intro.jpg" style="text-decoration:none;color:white" target="_blank"> Intro </a> </td>
+<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> </td>
+</td>
 </tr>
 </table>
 </div>
