--- a/logger/logger.html
+++ b/logger/logger.html
@@ -20,7 +20,7 @@ table, th, td {
 </style>
 </head>
 
-<body bgcolor = "black">
+<body bgcolor = "white">
 
 <center><h2>Logger</h2></center>
 <a href="Intro.jpg" style="text-decoration:none;color:white" target="_blank"> Intro </a>
