logger bg white

--- a/logger/logger.html
+++ b/logger/logger.html
@@ -11,7 +11,7 @@ A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
-h2   {color: white;}
+h2   {color: black;}
 h3  {color: black;}
 }
 table, th, td {
@@ -23,7 +23,7 @@ table, th, td {
 <body bgcolor = "white">
 
 <center><h2>Logger</h2></center>
-<a href="Intro.jpg" style="text-decoration:none;color:white" target="_blank"> Intro </a>
+<a href="Intro.jpg" style="text-decoration:none;color:black" target="_blank"> Intro </a>
 
 <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
