Free access link to Rohit's paper

--- a/index.html
+++ b/index.html
@@ -664,10 +664,11 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <br>
 
 <div id="flip6">
-	<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study", Combustion and Flame (accepted)
+	<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study", Combustion and Flame, 196, 116-128, 2018
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
+	<li><a href="	https://authors.elsevier.com/a/1XHew2KiHMUbd" target="_blank">Free access Link</a> (valid until August 15, 2018)
 	<li><a href="https://www.dropbox.com/s/xlrfa5toz6ewris/Revised_Manuscript.pdf?dl=0" target="_blank">Preprint*</a> ,  <a href="https://www.dropbox.com/s/oqb8cuwcliwrza9/CNF_1.pdf?dl=0">Highlights</a></li>
 	<li><a href="https://www.dropbox.com/s/38016hs2zfwdud3/Supplementary_Material.pdf?dl=0" target="_blank">Supplementary document</a></li>
 		<li>Mechanism: 
