filled-up-position

--- a/project_writeup/Reduced_Reaction_Models_For_Combustion.html
+++ b/project_writeup/Reduced_Reaction_Models_For_Combustion.html
@@ -16,6 +16,7 @@ h2   {color: black;}
 </style>
 </head>
 
+<h2>**This position is not available anymore**</h2>
 <h2>Abstract</h2>
 
 Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. This project initially involves developing a black box tool to reduce reaction mechanisms based on existing ideas. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
