--- a/index.html
+++ b/index.html
@@ -493,6 +493,23 @@ Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological 
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
 
+<ul>
+<li> <h3></h3> 
+The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. A black box tool will be developed to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- Reaction mechanism optimization. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models. 
+
+</br>	
+	<td width="15%">
+	<center><img src="./images/Krunal.jpg" width="150">	
+	</br>
+	<h4>Krunal Rajeshkumar Panchal</h4>
+	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+</center>
+Krunal obtained his B.E. in Mechanical Engineering from Government Engineering College, Modasa, Gujarat in 2016. Thereafter, he obtained his M. Tech in Mechanical Engineering from Nirma Unervisity, Ahmedabad, Gujarat in 2018. His research topic focuses on optimization methods in combustion kinetics.
+</p></br>
+	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</ul>
+
+
 </td>
 </tr>
 </table>
