cleaning up available projects

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological 
 </ul>
 
 <ul>
-<li> <h3></h3> 
+<li> <h3>Optimization techniques in combustion kinetics</h3> 
 The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. A black box tool will be developed to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- Reaction mechanism optimization. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models. 
 
 </br>	
@@ -850,10 +850,10 @@ Write-up coming soon ...
 <!-- 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html" target="_blank"> Alternative Fuel Combustion </a> -->
 <!-- Development of kinetic model for Fischer-Tropsch fuels -->
 	<li> Development of kinetic model for oxygenated fuels (knock-reduction additives)
-	<li> <a href="project_writeup/Biodiesel_Combustion.html" target="_blank"> Biodiesel Combustion </a>
+	<!-- <li> <a href="project_writeup/Biodiesel_Combustion.html" target="_blank"> Biodiesel Combustion </a> -->
 		<!--Analysis of the importance of unsaturated ester representatives in biodiesel surrogates -->
 	<li> Automatic reaction mechanism generation
-	<li> <a href="project_writeup/Optimization_in_Combustion.html" target="_blank"> Optimization in Combustion </a> 
+	<!-- <li> <a href="project_writeup/Optimization_in_Combustion.html" target="_blank"> Optimization in Combustion </a> --> 
 		<!-- Mechanism optimization framework -->
 	<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html" target="_blank"> Methods for mechanism reduction </a> 
 	<li> Development of structure based compact reaction models
