alignment issues rectified

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ Our research focuses on development of chemical kinetic models to describe oxida
 <li> <h3>Kinetics of biodiesel surrogate components:</h3> 
 One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on recent experimental measurements and theoretical rate constant calculations. The revised kinetic model has been validated comprehensively against a wide range of experimental data along with ignition delays at intermediate temperatures measured in an RCM at PTB, Germany. </br>
 </br> 
- <center><img src="./current_research/biodiesel_aditya/ign_BDsurrogate.pdf" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+ <center><img src="./current_research/biodiesel_aditya/ign_BDsurrogate.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
  <img src="./current_research/biodiesel_aditya/JSR_rme_sur1.jpg"   style="float: left; width: 32%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
 	 Thereafter, a novel approach is used to propose surrogates to represent biodiesel fuel, consisting of methylbutanoate and n-dodecane, and assessed thoroughly (Fig. on the left). This work serves as our first step towards the development of a compact reaction scheme for a biodiesel surrogate which will be coupled with combustion studies to investigate the use of biodiesels and its blends with diesel in CI engines.
 <p style="clear: both;"><!--Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols: experiments for biodiesel, solid lines: Surrogate A, dashed lines: Surrogate B </br>-->
@@ -454,9 +454,11 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
-
+</td>
+</tr>
 <tr>
 <td>
+
 <ul>
 <li> <h3>Oxidation kinetics of alternative aviation fuels:</h3> 
 Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. To predict, assess, and understand their combustion characteristics from a fundamental approach, a kinetic model for a  suitable reference mixture that mimics a chosen alternative fuel is being developed. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
@@ -471,17 +473,20 @@ Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering Coll
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
-
-
+</td>
+</tr>
 <tr>
 <td>
+
+
 <ul>
 <li> <h3>Surrogates for liquid phase applications</h3> 
 Surrogate mixtures are often used to emulate gas phase combustion characteristics of real fuels, such as heating value, sooting characteristics, and propensity to ignition. These cannot be used as such in liquid phase applications, where multi-phase processes, such as spray injection, are important. Typically, for these applications, surrogates are proposed by matching targets such as density, viscosity, and distillation curves between the real fuel and the surrogate. However, these targets do not pertain to a combustion environment. One attractive option to include evaporation and phase equilibrium dynamics in the surrogate definition is to study the combustion characteristics of an isolated droplet. This project involves simulating the burning process of isolated fuel droplets at low gravity for neat fuel components as well as mixtures of hydrocarbons relevant as transportation fuel surrogates. Evaporation rates of fuels in this simple configuration may be useful quantities to describe the multi-phase effects in a combusting environment. <br> </br>
 
 In this project, numerical solution procedure to predict the droplet burning accounting for the interface conditions will be developed. Techniques to obtain solutions with reduced computational time will be explored. The validity of the model will be ascertained based on the vast data available in the literature. Thereafter, evaporation rate rules will be developed for the surrogate mixture in terms of the components, and investigated if it is indeed an appropriate measure or if other additional parameters may be needed to come up with a good surrogate valid for liquid-phase applications.
+</br>
 
-</br>	
+	
 	<td width="15%">
 	<center><img src="./images/Pragnesh.jpg" width="150">	
 	</br>
@@ -492,6 +497,10 @@ Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological 
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
+</td>
+</tr>
+<tr>
+<td>
 
 <ul>
 <li> <h3>Optimization techniques in combustion kinetics</h3> 
