adding group pics

--- a/index.html
+++ b/index.html
@@ -932,6 +932,7 @@ Write-up coming soon ...
 <tr>
 <td>
 <h2> 
+<a href="gallery/gallery.html" style="text-decoration:none;color:white" target="_blank"> Gallery </a>  <br>
 <body link="gray">
 <a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> </td>
 </td>
