adding slot info for ME1100:

--- a/index.html
+++ b/index.html
@@ -894,7 +894,8 @@ Write-up coming soon ...
 		<i>Jan-May 2017</i><br>
 		<i>Jan-May 2018</i><br><br>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
-		<i>Jul-Nov 2016</i><br><br>
+		<i>Jul-Nov 2016</i><br>
+		<i>Jul-Nov 2018 (A-slot)</i><br><br>
 <li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2017</i><br><br>
 </ul>
