--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <h2 id="Group">Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
-</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic.</i>
+</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic. Please note that I am *not* interested in hiring interns.</i>
 
 <td width="25%">
 	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
