--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <tr>
 	<td width="100%">
 	My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions.   
-</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic.</i>
+</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic. Please note that I am *not* interested in hiring interns.</i>
 </td>
 </tr>
 </table>
