--- a/index.html
+++ b/index.html
@@ -680,11 +680,20 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 
 
 <div id="flip7">
-	<li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate", Combustion and Flame (accepted)
+	<li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate", Combustion and Flame, 197, 49-64, 2018
 </div>
 <div id="panel7">
 	<ul style="list-style-type:square">
+	<li><a href="https://authors.elsevier.com/a/1XTGb2KiHMUm4"> Free access link</a> (valid until September 17th, 2018)
 	<li><a href="https://www.dropbox.com/s/s8cvkpa6t25tgoh/MB_R2.pdf?dl=0" target="_blank">Preprint*</a> ,  <a href="https://www.dropbox.com/s/5qbzf8d3qcdr9mu/CNF_2.pdf?dl=0">Highlights</a></li>
+	<li><a href="https://www.dropbox.com/s/sq9cuvl15pbbpim/supplementary_CNF.pdf?dl=0" target="_blank">Supplementary document</a></li>
+		<li>Mechanism files: <br>
+			Complete mechanism: <a href="https://www.dropbox.com/s/4nbq7lgkrwlbcql/IITM_mech.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/xskmyzxbrpk3pll/IITM_mech.mech?dl=0">FlameMaster format</a> <br>
+			High temperature mechanism: <a href="https://www.dropbox.com/s/8g3u5s17qli1lk8/methyl_butanoate_dodecane_high_temperature.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/mwvit6hqjenjek6/methyl_butanoate_dodecane_high_temperature.mech?dl=0">FlameMaster format</a>
+		</li>
+		<li><a href="https://www.dropbox.com/s/l9ld3frev39f2oi/Thermo_File.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/nlbf0rkhpy5aau4/Transport_File.txt?dl=0" target="_blank">Transport data</a></li>
+
 </ul>
 </div>
 <br>
