adding notes for ME1100

--- a/index.html
+++ b/index.html
@@ -904,7 +904,12 @@ Write-up coming soon ...
 		<i>Jan-May 2018</i><br><br>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2016</i><br>
-		<i>Jul-Nov 2018 (A-slot)</i><br><br>
+		<i>Jul-Nov 2018</i><br>
+	Lecture summary
+		<ul>
+	<li>		
+ <a href="teaching/ME1100_Jul_Nov_2018/Fundamentals.pdf" target="_blank">Fundamentals</a><br> <br>
+	</ul>
 <li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2017</i><br><br>
 </ul>
