--- a/index.html
+++ b/index.html
@@ -949,7 +949,33 @@ Write-up coming soon ...
 <h2> 
 <a href="gallery/gallery.html" style="text-decoration:none;color:white" target="_blank"> Gallery </a>  <br>
 <body link="gray">
-<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> </td>
+<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> 
+<SCRIPT>
+function passWord() {
+var testV = 1;
+var pass1 = prompt('Please Enter Your Password',' ');
+while (testV < 3) {
+if (!pass1) 
+history.go(-1);
+if (pass1.toLowerCase() == "c^3_iitm") {
+alert('You Got it Right!');
+window.open('logger/logger.html');
+break;
+} 
+testV+=1;
+var pass1 = 
+prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
+}
+if (pass1.toLowerCase()!="password" & testV ==3) 
+history.go(-1);
+return " ";
+} 
+</SCRIPT>
+<FORM>
+<input type="button" value="Testing password protected blog: Musings" onClick="passWord()">
+</FORM>
+
+</td>
 </td>
 </tr>
 </table>
