--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ return " ";
 } 
 </SCRIPT>
 <FORM>
-<input type="button" value="Testing password protected blog: Musings" onClick="passWord()">
+<input type="button" value="Testing password protected pages ..." onClick="passWord()">
 </FORM>
 
 </td>
