--- a/index.html
+++ b/index.html
@@ -953,18 +953,17 @@ Write-up coming soon ...
 <SCRIPT>
 function passWord() {
 var testV = 1;
-var pass1 = prompt('Please Enter Your Password',' ');
+var pass1 = prompt('Please Enter Your Password','');
 while (testV < 3) {
 if (!pass1) 
 history.go(-1);
 if (pass1.toLowerCase() == "c^3_iitm") {
-alert('You Got it Right!');
 window.open('logger/logger.html');
 break;
 } 
 testV+=1;
 var pass1 = 
-prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
+prompt('Password Incorrect, Please Try Again.','');
 }
 if (pass1.toLowerCase()!="password" & testV ==3) 
 history.go(-1);
