playing with html

--- a/index.html
+++ b/index.html
@@ -940,16 +940,23 @@ Write-up coming soon ...
 <a href="http://www.tutorialspoint.com/codingground.htm"  style="text-decoration:none;color:white" target="_blank">Coding ground</a></br>
 <a href="https://www.overleaf.com"  style="text-decoration:none;color:white" target="_blank">WriteLaTeX</a></br>
 <a href="http://detexify.kirelabs.org/classify.html"  style="text-decoration:none;color:white" target="_blank">Detexify</a></br>
-<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white" target="_blank">WordClouds</a><br>
+<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white" target="_blank">WordClouds</a></br></br>
 </td>
 </tr>
 
 <tr>
 <td>
-<h2> 
+<h2> Unclassified </h2>
 <a href="gallery/gallery.html" style="text-decoration:none;color:white" target="_blank"> Gallery </a>  <br>
 <body link="gray">
-<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> 
+<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a></br></br>
+</td>
+</tr>
+
+
+<tr>
+<td>
+<h2> My html testing-ground</h2>
 <SCRIPT>
 function passWord() {
 var testV = 1;
@@ -971,12 +978,24 @@ return " ";
 } 
 </SCRIPT>
 <FORM>
-<input type="button" value="Testing password protected pages ..." onClick="passWord()">
+<input type="button" value="Creating password protected pages ..." onClick="passWord()">
 </FORM>
+
+<!--
+<form  method="post">
+<div>
+<textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
+Hey... say something!
+</textarea>
+</div>
+<input type="submit" value="Submit">
+</form>
+-->
 
 </td>
 </td>
 </tr>
+
 </table>
 </div>
 
