adding bullet to work notes

--- a/index.html
+++ b/index.html
@@ -908,8 +908,8 @@ Write-up coming soon ...
 	Lecture summary
 		<ul>
 	<li>		
- <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a><br> <br>
-<a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
+ <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
 	</ul>
 <li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2017</i><br><br>
