adding travel log 1

--- a/index.html
+++ b/index.html
@@ -907,9 +907,13 @@ Write-up coming soon ...
 <td>
 <h2> 
 <body link="gray">
-<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> </td>
+<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2>
+
+<a href="" style="text-decoration:none;color:white" target="_blank">  </a> 
+
 </td>
 </tr>
+
 </table>
 </div>
 
