post later after corrections

--- a/logger/logger.html
+++ b/logger/logger.html
@@ -25,6 +25,6 @@ table, th, td {
 
 <center><h2>Logger</h2></center>
 <a href="Intro.jpg" style="text-decoration:none;color:black" target="_blank"> Intro </a> <br>
-<!-- ><a href="https://www.dropbox.com/s/p200g7tk4mr8n5c/ram_1.pdf?dl=0" style="text-decoration:none;color:black" target="_blank"> Post 1 </a> -->
-Travel: <a href="https://www.dropbox.com/s/cpi1cedtoah6uyg/travel_1.pdf?dl=0" style="text-decoration:none;color:black" target="_blank"> Post 1 </a>
+<a href="https://www.dropbox.com/s/p200g7tk4mr8n5c/ram_1.pdf?dl=0" style="text-decoration:none;color:black" target="_blank"> Post 1 </a>
+<!-- Travel: <a href="https://www.dropbox.com/s/cpi1cedtoah6uyg/travel_1.pdf?dl=0" style="text-decoration:none;color:black" target="_blank"> Post 1 </a> -->
 </body></html>
