--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ Write-up coming soon ...
 		<i>Jan-May 2018</i><br><br>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2016</i><br>
-		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</i><br>
+		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br>
 	Lecture summary
 		<ul>
 	<li>		
