--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -25,7 +25,7 @@ table, th, td {
 <center> <h1> ME1100: Undergraduate thermodynamics <br>
 Jul-Nov 2018 </h1>
 </center>
-<a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br><br>
+<a href="outline_ME1100.pdf" target="_blank">Course contents</a><br><br>
 
 Lecture summary
 		<ul>
