--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -25,11 +25,12 @@ table, th, td {
 <center> <h1> ME1100: Undergraduate thermodynamics <br>
 Jul-Nov 2018 </h1>
 </center>
-<a href="outline_ME1100.pdf" target="_blank">Course contents</a><br><br>
+<a href="https://owncloud.iitm.ac.in/index.php/s/pAma6r5ivTdPCul" target="_blank">Course contents</a><br><br>
+
+<a href="https://owncloud.iitm.ac.in/index.php/s/lGo6RpBHLT30rj4" target="_blank">Lecture notes from Prof. TS</a><br><br>
 
 Lecture summary
-		<ul>
-	<li>	 	
+<ul>	<li>	 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
 	</ul>
