ME1100-course website

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -1,52 +1,69 @@
 <!DOCTYPE html>
 <html>
 
-
 <title>ME1100: Thermodynamics</title>
 <head>
 <style type="text/css">
 body{color:white}
 body{font-family:"Palatino"}
 body{font-size: 1.1em;}
+body {margin: 1em; } 
 A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
-h2   {color: white;}
+h2   {color: lightblue;}
 h3  {color: pink;}
 }
 table, th, td {
     border: 1px solid black;
 }
+h3{
+  margin-bottom: 0px;
+}
 </style>
 </head>
 
 <body bgcolor = "black">
+
 <center> <h1> ME1100: Undergraduate thermodynamics <br>
 Jul-Nov 2018 </h1>
+<h2><a href="https://owncloud.iitm.ac.in/index.php/s/pAma6r5ivTdPCul" target="_blank">Course contents</a></h2>
+<h2> Instructor office hours: Wednesdays 2-3 PM, TDCE 203 </h2> <br>
 </center>
-<a href="https://owncloud.iitm.ac.in/index.php/s/pAma6r5ivTdPCul" target="_blank">Course contents</a><br><br>
 
-<a href="https://owncloud.iitm.ac.in/index.php/s/lGo6RpBHLT30rj4" target="_blank">Lecture notes from Prof. TS</a><br><br>
 
-Lecture summary
+<table border="1" cellspacing="5" cellpadding="5" width="100%">
+<tr>
+<td width="50%">
+<h2>Course Lectures </h2>
+
+<a href="https://owncloud.iitm.ac.in/index.php/s/lGo6RpBHLT30rj4" target="_blank">Lecture notes from Prof. TS</a> (same as on moodle) <br><br>
+
+<h3> Lecture summary </h3>
 <ul>	<li>	 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
 	</ul>
+</td>
 
-Tutorials: same as on moodle
+<td width="50%">
+<h2>Problem sheets </h2>
+<h3> Tutorials: same as on moodle </h3>
 <ul>
-	<li>Tutorial 1 	
+	<li>Tutorial 1: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/mTtvHG8P9RmTeev" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/j7ksBktLoE6ToB4" target="_blank">Solutions</a> <br>
-    <li>Tutorial 2
+    <li>Tutorial 2:
  <a href="?" target="_blank">Problems</a> <br>
 <br>
 	</ul>
 
-Additional problem sheets: 
+<h3> Additional problem sheets </h3>
 <ul>
-<li>Fundamentals, Work 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Problems</a>
+<li>Problem Set 1: 	
+ <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
 </ul>
+</td>
+</table>
+
 </body></html>
