ME1100 - course website

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -28,7 +28,7 @@ h3{
 
 <center> <h1> ME1100: Undergraduate thermodynamics <br>
 Jul-Nov 2018 </h1>
-<h2><a href="https://owncloud.iitm.ac.in/index.php/s/JQztf5HFEt7DqwQ">Course contents</a></h2>
+<h2><a href="https://owncloud.iitm.ac.in/index.php/s/JQztf5HFEt7DqwQ" target="_blank">Course contents</a></h2>
 <h2> Instructor office hours: Wednesdays 2-3 PM, TDCE 203 </h2> <br>
 </center>
 
