ME1100-course website

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -64,6 +64,33 @@ Jul-Nov 2018 </h1>
  <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
 </ul>
 </td>
+</tr>
+</table>
+
+<!-- /*For later */
+<table>
+<tr>
+<td width="100%">
+<h2> Announcements: </h2>
+<ul>
+<li> Lecture on Aug 14: Resisted/Un-resisted expansions, Other forms of work
+</li> </ul>
+</td>
+</tr>
+</table>
+
+<table>
+<tr>
+<td width="50%">
+<h2>Check your conceptual understanding</h2>
+</td>
+
+<td width="50%">
+<h2>Exams </h2>
+</td>
+
+</tr>
+-->
 </table>
 
 </body></html>
