--- a/logger/logger.html
+++ b/logger/logger.html
@@ -5,15 +5,16 @@
 <title>Musings</title>
 <head>
 <style type="text/css">
-body{color:black}
+body{color:white}
 body{font-family:"Palatino"}
 body{font-size: 1.1em;}
+body{margin: 1em;}
 A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
-h2   {color: black;}
-h3  {color: black;}
+h2   {color: white;}
+h3  {color: pink;}
 }
 table, th, td {
     border: 1px solid black;
@@ -21,10 +22,13 @@ table, th, td {
 </style>
 </head>
 
-<body bgcolor = "white">
+<body bgcolor = "black">
 
 <center><h2>Logger</h2></center>
-<a href="Intro.jpg" style="text-decoration:none;color:black" target="_blank"> Intro </a> <br>
+<a href="Intro.jpg" style="text-decoration:none;color:white" target="_blank"> Intro </a> <br><br>
 <!-- <a href="https://www.dropbox.com/s/p200g7tk4mr8n5c/ram_1.pdf?dl=0" style="text-decoration:none;color:black" target="_blank"> Post 1 </a>-->
-Travel: <a href="https://www.dropbox.com/s/cpi1cedtoah6uyg/travel_1.pdf?dl=0" style="text-decoration:none;color:black" target="_blank"> Kanchipuram temple </a>
+Travel: 
+<ul> 
+<li> <a href="https://www.dropbox.com/s/cpi1cedtoah6uyg/travel_1.pdf?dl=0" style="text-decoration:none;color:white" target="_blank"> Kanchipuram temple </a></li>
+</ul>
 </body></html>
