--- a/index.html
+++ b/index.html
@@ -904,13 +904,7 @@ Write-up coming soon ...
 		<i>Jan-May 2018</i><br><br>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2016</i><br>
-		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br>
-	Lecture summary
-		<ul>
-	<li>		
- <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
-	</ul>
+		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br><br>
 <li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2017</i><br><br>
 </ul>
@@ -950,13 +944,14 @@ Write-up coming soon ...
 <h2> Unclassified </h2>
 <a href="gallery/gallery.html" style="text-decoration:none;color:white" target="_blank"> Gallery </a>  <br>
 <body link="gray">
-<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2>
+<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> <br><br>
 </td>
 </tr>
 
 <tr>
 <td>
 <h2> My html testing-ground</h2>
+
 <SCRIPT>
 function passWord() {
 var testV = 1;
@@ -979,7 +974,7 @@ return " ";
 </SCRIPT>
 <FORM>
 <input type="button" value="Creating password protected pages ..." onClick="passWord()">
-</FORM>
+</FORM><br><br>
 
 <!--
 <form  method="post">
