--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -4,15 +4,15 @@
 <title>Gallery</title>
 <head>
 <style type="text/css">
-body{color:black}
+body{color:white}
 body{font-family:"Palatino"}
 body{font-size: 1.1em;}
 A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
-h2   {color: black;}
-h3  {color: black;}
+h2   {color: white;}
+h3  {color: pink;}
 }
 table, th, td {
     border: 1px solid black;
@@ -20,7 +20,7 @@ table, th, td {
 </style>
 </head>
 
-<body bgcolor = "white">
+<body bgcolor = "black">
 
 <center><h2>Group Pictures</h2>
 Our team as of May 2017	<br>
