--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -28,6 +28,13 @@ h3{
 
 <center> <h1> ME1100: Undergraduate thermodynamics <br>
 Jul-Nov 2018 </h1>
+
+<td width="100%">
+<center><img src="./images/Calvin-And-Hobbes-Need-To-Make-A-Robot.jpg" width="800">
+</center>
+</td>
+
+<table border="1" cellspacing="5" cellpadding="5" width="100%">
 <h2><a href="https://owncloud.iitm.ac.in/index.php/s/JQztf5HFEt7DqwQ" target="_blank">Course contents</a></h2>
 <h2> Instructor office hours: Wednesdays 2-3 PM, TDCE 203 </h2> <br>
 </center>
