--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -52,6 +52,9 @@ Jul-Nov 2018 </h1>
  <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
 	</ul>
+	
+<h3> Steam tables: same as on moodle </h3>
+<a href="https://owncloud.iitm.ac.in/index.php/s/RPiQyj4w9J5nizu" target="_blank">Water and R134a</a>
 </td>
 
 <td width="50%">
