adding steam tables

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -54,7 +54,8 @@ Jul-Nov 2018 </h1>
 	</ul>
 	
 <h3> Steam tables: same as on moodle </h3>
-<a href="https://owncloud.iitm.ac.in/index.php/s/RPiQyj4w9J5nizu" target="_blank">Water and R134a</a>
+<ul>	<li>	<a href="https://owncloud.iitm.ac.in/index.php/s/RPiQyj4w9J5nizu" target="_blank">Water and R134a</a><br> <br>
+	</ul>
 </td>
 
 <td width="50%">
