adding steam tables

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -53,7 +53,7 @@ Jul-Nov 2018 </h1>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
 	</ul>
 	
-<h3> Steam tables: same as on moodle </h3>
+<h3> Property tables: same as on moodle </h3>
 <ul>	<li>	<a href="https://owncloud.iitm.ac.in/index.php/s/RPiQyj4w9J5nizu" target="_blank">Water and R134a</a><br> <br>
 	</ul>
 </td>
@@ -73,6 +73,8 @@ Jul-Nov 2018 </h1>
 <ul>
 <li>Problem Set 1: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
+<li>Problem Set 2: 	
+ <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
 </ul>
 </td>
 </tr>
